--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MSS Placement Test</title>
-    <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Piazzolla&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Piazzolla:wght@200;700&family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./bundle.css" type="text/css">
 </head>
 <body>
